Update to latest ESP IDF

--- a/Firmware/ESP32/main/CMakeLists.txt
+++ b/Firmware/ESP32/main/CMakeLists.txt
@@ -1,3 +1,5 @@
 idf_component_register(SRCS "openhaystack_main.c" "uECC.c"
                            
                     INCLUDE_DIRS ".")
+
+target_compile_options(${COMPONENT_LIB} PRIVATE  -Wno-format)
